Fix toolbar colors in dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,7 +178,7 @@ table.dual-table td:last-child {
 }
 
 #toolbar .dropdown > button > a {
-  color: black;
+  color: var(--text-dark);
   text-decoration: none;
 }
 
